qp function almost

--- a/pyrnn/src/ProtoTested.ipynb
+++ b/pyrnn/src/ProtoTested.ipynb
@@ -221,6 +221,7 @@
     "%autoreload 2\n",
     "from __future__ import absolute_import\n",
     "\n",
+    "# coding=utf-8\n",
     "import torch\n",
     "\n",
     "import torch.nn as nn\n",
@@ -236,7 +237,6 @@
     "from qpth.qp import QPFunction\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "class LSTMModel(nn.Module):\n",
     "    '''\n",
@@ -254,10 +254,40 @@
     "        output (seq_len, batch, hidden_size * num_directions)\n",
     "        h_n (num_layers * num_directions, batch, hidden_size)\n",
     "        c_n (num_layers * num_directions, batch, hidden_size):\n",
+    "\n",
+    "    QP Layer:\n",
+    "        nz = 6, neq = 0, nineq = 12, QPenalty = 0.1\n",
     "    '''\n",
-    "    def __init__(self, inputSize, nHidden, batchSize, noutputs=3, numLayers=2):\n",
+    "    def __init__(self, nz, neq, nineq, Qpenalty, inputSize, nHidden, batchSize, noutputs=3, numLayers=2):\n",
+    "\n",
     "        super(LSTMModel, self).__init__()\n",
-    "        \n",
+    "\n",
+    "        # QP Parameters\n",
+    "        nx = nz * 2  #cause inequality is double sided (see my notes)\n",
+    "        self.neq = neq\n",
+    "        self.nineq = ineq\n",
+    "        self.nz = nz\n",
+    "\n",
+    "        self.Q = Variable(Qpenalty*torch.eye(nx).double())\n",
+    "        self.G = Variable(torch.eye(nx).double())\n",
+    "        for i in range(6):\n",
+    "            self.G[i][i] *= -1\n",
+    "        self.h = Variable(torch.ones(nx).double())\n",
+    "        self.A = 1000*npr.randn(neq, nz)\n",
+    "        self.b = Variable(torch.zeros(self.A.size(0)).double())\n",
+    "        def qp_layer(x):\n",
+    "            nBatch = x.size(0)\n",
+    "            Q = self.Q.unsqueeze(0).expand(nBatch, self.nz, nHidden)\n",
+    "            G = self.G.unsqueeze(0).expand(nBatch, nHidden, self.nHidden)\n",
+    "            h = self.h.unsqueeze(0).expand(nBatch, self.nineq)\n",
+    "            A = self.A.unsqueeze(0).expand(nBatch, 1, self.neq)\n",
+    "            b = self.b.unsqueeze(0).expand(nBatch, 1)\n",
+    "            x = QPFunction()(x.double(), Q, G, h, A, b).float()\n",
+    "            return x\n",
+    "        self.qp_layer = qp_layer\n",
+    "\n",
+    "\n",
+    "        # Backprop Through Time (Recurrent Layer) Params\n",
     "        self.cost = nn.MSELoss(size_average=False)\n",
     "        self.noutputs = noutputs\n",
     "        self.num_layers = numLayers\n",
@@ -265,6 +295,7 @@
     "        self.nHidden = nHidden\n",
     "        self.batchSize = batchSize\n",
     "        self.noutputs = noutputs\n",
+    "        self.criterion = nn.MSELoss(size_average=False)\n",
     "        \n",
     "        #define recurrent and linear layers\n",
     "        self.lstm1  = nn.LSTM(inputSize,nHidden[0],num_layers=numLayers)\n",
@@ -275,32 +306,34 @@
     "\n",
     "    def forward(self, x):\n",
     "        nBatch = x.size(0)\n",
-    "        \n",
+    "\n",
     "        # Set initial states \n",
-    "        h0 = Variable(torch.Tensor(self.num_layers, batchSize, self.nHidden[0])) \n",
-    "        c0 = Variable(torch.Tensor(self.num_layers, batchSize, self.nHidden[0]))        \n",
+    "        h0 = Variable(torch.Tensor(self.num_layers, self.batchSize, self.nHidden[0])) \n",
+    "        c0 = Variable(torch.Tensor(self.num_layers, self.batchSize, self.nHidden[0]))        \n",
     "        # Forward propagate RNN layer 1\n",
     "        out, _ = self.lstm1(x, (h0, c0)) \n",
     "        out = self.drop(out)\n",
     "        \n",
     "        # Set hidden layer 2 states \n",
-    "        h1 = Variable(torch.Tensor(self.num_layers, batchSize, self.nHidden[1])) \n",
-    "        c1 = Variable(torch.Tensor(self.num_layers, batchSize, self.nHidden[1]))        \n",
+    "        h1 = Variable(torch.Tensor(self.num_layers, self.batchSize, self.nHidden[1])) \n",
+    "        c1 = Variable(torch.Tensor(self.num_layers, self.batchSize, self.nHidden[1]))        \n",
     "        # Forward propagate RNN layer 2\n",
     "        out, _ = self.lstm2(out, (h1, c1))  \n",
     "        \n",
     "        # Set hidden layer 3 states \n",
-    "        h2 = Variable(torch.Tensor(self.num_layers, batchSize, self.nHidden[2])) \n",
-    "        c2 = Variable(torch.Tensor(self.num_layers, batchSize, self.nHidden[2]))        \n",
+    "        h2 = Variable(torch.Tensor(self.num_layers, self.batchSize, self.nHidden[2])) \n",
+    "        c2 = Variable(torch.Tensor(self.num_layers, self.batchSize, self.nHidden[2]))        \n",
     "        # Forward propagate RNN layer 2\n",
     "        out, _ = self.lstm3(out, (h2, c2)) \n",
     "        out = self.drop(out) \n",
     "        \n",
     "        # Decode hidden state of last time step\n",
-    "        out = self.fc(out[:, -1, :])  \n",
-    "        out = out.view(nBatch, -1) \n",
-    "        return out\n",
+    "        out = self.fc(out[:, -1, :]) \n",
     "\n",
+    "        #Now add QP Layer\n",
+    "        out = out.view(nBatch, -1) \n",
+    "        return self.qp_layer(out)\n",
+    "    \n",
     "#hyperparams\n",
     "inputSize = 9\n",
     "nHidden   = [9,6,6]\n",
