--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -468,17 +468,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-4ef5fffdb4a0>, line 32)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-4ef5fffdb4a0>\"\u001b[0;36m, line \u001b[0;32m32\u001b[0m\n\u001b[0;31m    Q_LU = Q.btrf()trf(Q))\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1.11+d122b4e\n",
+      "(\n",
+      "(0 ,.,.) = \n",
+      " -1.4266  1.2064  0.9256\n",
+      "  0.8128 -1.6146  0.2384\n",
+      "  0.3730 -0.1255  0.9055\n",
+      "\n",
+      "(1 ,.,.) = \n",
+      " -1.6335 -2.6322 -0.0602\n",
+      "  0.7003  1.3569 -0.4683\n",
+      " -0.3268  0.0437  0.8979\n",
+      "[torch.DoubleTensor of size 2x3x3]\n",
+      ", \n",
+      " 2  3  3\n",
+      " 1  3  3\n",
+      "[torch.IntTensor of size 2x3]\n",
+      ")\n"
      ]
     }
    ],
@@ -501,21 +516,15 @@
     "nx = nz * 2\n",
     "nHidden = 9\n",
     "\n",
-    "QPenalty = 0.1\n",
-    "Q = Variable(QPenalty*torch.eye(nx).double())\n",
+    "print(torch.__version__)\n",
     "\n",
-    "nBatch = 5\n",
-    "# Q.unsqueeze(0).expand(nBatch, nx, nx)\n",
-    "h = torch.ones(nx).double().transpose(0, 0)\n",
-    "ht = h.transpose(0, 0)\n",
+    "# Q = 1e-8*torch.eye(4).double()\n",
+    "# G = torch.eye(4)\n",
+    "# Q_LU = Q.btrifact()\n",
     "\n",
-    "Q = 1e-8*torch.eye(3)\n",
-    "nFeatures = 3\n",
-    "Q[:nFeatures,:nFeatures] = torch.eye(nFeatures)\n",
-    "print Q\n",
-    "L = Parameter(torch.po\n",
-    "Q_LU = Q.btrf()trf(Q))\n",
-    "print Q_LU"
+    "A = torch.randn(2, 3, 3)\n",
+    "A_LU = A.double().btrifact()\n",
+    "print A_LU\n"
    ]
   },
   {
