failing at e Tensor

--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -477,22 +477,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1.11+d122b4e\n",
-      "(\n",
-      "(0 ,.,.) = \n",
-      " -1.4266  1.2064  0.9256\n",
-      "  0.8128 -1.6146  0.2384\n",
-      "  0.3730 -0.1255  0.9055\n",
-      "\n",
-      "(1 ,.,.) = \n",
-      " -1.6335 -2.6322 -0.0602\n",
-      "  0.7003  1.3569 -0.4683\n",
-      " -0.3268  0.0437  0.8979\n",
-      "[torch.DoubleTensor of size 2x3x3]\n",
+      "(Parameter containing:[torch.DoubleTensor with no dimension]\n",
       ", \n",
-      " 2  3  3\n",
-      " 1  3  3\n",
-      "[torch.IntTensor of size 2x3]\n",
+      " 6.9103e-310\n",
+      " 2.1148e-316\n",
+      "[torch.DoubleTensor of size 2]\n",
       ")\n"
      ]
     }
@@ -512,19 +501,20 @@
     "x = torch.Tensor(5, 1, 9)\n",
     "\n",
     "#-------------------------------------------------------------#\n",
-    "nz = 6\n",
+    "nz = 3\n",
     "nx = nz * 2\n",
     "nHidden = 9\n",
+    "nBatch = 5\n",
+    "nineq = 12\n",
+    "neq = 0\n",
     "\n",
-    "print(torch.__version__)\n",
-    "\n",
-    "# Q = 1e-8*torch.eye(4).double()\n",
-    "# G = torch.eye(4)\n",
-    "# Q_LU = Q.btrifact()\n",
-    "\n",
-    "A = torch.randn(2, 3, 3)\n",
-    "A_LU = A.double().btrifact()\n",
-    "print A_LU\n"
+    "A = Parameter(torch.randn(neq, nx).double())\n",
+    "h = Variable(torch.ones(nx).double())\n",
+    "G = torch.eye(nineq, 3).double()\n",
+    "for i in range(nz):\n",
+    "    G[i][i] *= -1\n",
+    "q = torch.DoubleTensor(2)\n",
+    "print(A, q)"
    ]
   },
   {
@@ -533,6 +523,15 @@
    "source": [
     "# "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
