updated code so far

--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -478,11 +478,11 @@
      "output_type": "stream",
      "text": [
       "(Parameter containing:[torch.DoubleTensor with no dimension]\n",
-      ", \n",
-      " 6.9103e-310\n",
-      " 2.1148e-316\n",
-      "[torch.DoubleTensor of size 2]\n",
-      ")\n"
+      ", Variable containing:[torch.cuda.DoubleTensor with no dimension]\n",
+      ")\n",
+      "\n",
+      "\n",
+      "0.1.11+d122b4e\n"
      ]
     }
    ],
@@ -513,8 +513,12 @@
     "G = torch.eye(nineq, 3).double()\n",
     "for i in range(nz):\n",
     "    G[i][i] *= -1\n",
-    "q = torch.DoubleTensor(2)\n",
-    "print(A, q)"
+    "q = torch.DoubleTensor(2).cuda()\n",
+    "e = Variable(torch.Tensor().double())\n",
+    "print(A, e.cuda())\n",
+    "\n",
+    "print('\\n')\n",
+    "print(torch.__version__)"
    ]
   },
   {
