--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -477,12 +477,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(Parameter containing:[torch.DoubleTensor with no dimension]\n",
-      ", Variable containing:[torch.cuda.DoubleTensor with no dimension]\n",
-      ")\n",
+      "Variable containing:\n",
+      "(0 ,.,.) = \n",
+      "  1  2  3\n",
+      "\n",
+      "(1 ,.,.) = \n",
+      "  1  2  3\n",
+      "\n",
+      "(2 ,.,.) = \n",
+      "  1  2  3\n",
+      "\n",
+      "(3 ,.,.) = \n",
+      "  1  2  3\n",
+      "\n",
+      "(4 ,.,.) = \n",
+      "  1  2  3\n",
+      "[torch.FloatTensor of size 5x1x3]\n",
       "\n",
       "\n",
-      "0.1.11+d122b4e\n"
+      "\n"
      ]
     }
    ],
@@ -515,10 +528,13 @@
     "    G[i][i] *= -1\n",
     "q = torch.DoubleTensor(2).cuda()\n",
     "e = Variable(torch.Tensor().double())\n",
-    "print(A, e.cuda())\n",
+    "version = torch.__version__\n",
     "\n",
-    "print('\\n')\n",
-    "print(torch.__version__)"
+    "targ = torch.Tensor([[1, 2, 3]])\n",
+    "targ = Variable(targ.expand_as(torch.LongTensor(5, 1, 3)))\n",
+    "print(targ)\n",
+    "\n",
+    "print('\\n')"
    ]
   },
   {
