--- a/pyrnn/src/testPYRNN.ipynb
+++ b/pyrnn/src/testPYRNN.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -478,21 +478,12 @@
      "output_type": "stream",
      "text": [
       "Variable containing:\n",
-      "(0 ,.,.) = \n",
-      "  1  2  3\n",
-      "\n",
-      "(1 ,.,.) = \n",
-      "  1  2  3\n",
-      "\n",
-      "(2 ,.,.) = \n",
-      "  1  2  3\n",
-      "\n",
-      "(3 ,.,.) = \n",
-      "  1  2  3\n",
-      "\n",
-      "(4 ,.,.) = \n",
-      "  1  2  3\n",
-      "[torch.FloatTensor of size 5x1x3]\n",
+      " 7  8  9\n",
+      " 7  8  9\n",
+      " 7  8  9\n",
+      " 7  8  9\n",
+      " 7  8  9\n",
+      "[torch.FloatTensor of size 5x3]\n",
       "\n",
       "\n",
       "\n"
@@ -503,6 +494,7 @@
     "import torch\n",
     "from torch.autograd import Variable\n",
     "from torch.nn.parameter import Parameter\n",
+    "import qpth\n",
     "\n",
     "L = Parameter(torch.tril(torch.rand(2, 2)))\n",
     "M = Variable(torch.tril(torch.ones(2, 2)))\n",
@@ -530,11 +522,12 @@
     "e = Variable(torch.Tensor().double())\n",
     "version = torch.__version__\n",
     "\n",
-    "targ = torch.Tensor([[1, 2, 3]])\n",
-    "targ = Variable(targ.expand_as(torch.LongTensor(5, 1, 3)))\n",
-    "print(targ)\n",
+    "targ = torch.Tensor([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "targ = Variable(targ.expand_as(torch.LongTensor(5, 3, 3)))\n",
+    "# print(targ[:, -1, :])\n",
     "\n",
-    "print('\\n')"
+    "# print('\\n')\n",
+    "#---------------------------------------------------------------------#\n"
    ]
   },
   {
@@ -542,6 +535,65 @@
    "metadata": {},
    "source": [
     "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "failed to factorize batch element 0 (info == -4) at /home/robotec/Documents/NNs/pytorch/torch/lib/TH/generic/THTensorLapack.c:1009",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d1258de10431>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdouble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mxhat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQPFunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'xhat '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxhat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/robotec/anaconda2/envs/py36/lib/python3.6/site-packages/qpth/qp.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, Q_, p_, G_, h_, A_, b_)\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnineq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnineq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQ_LU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mS_LU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpdipm_b\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpre_factor_kkt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         zhats, self.nus, self.lams, self.slacks = pdipm_b.forward(\n",
+      "\u001b[0;32m/home/robotec/anaconda2/envs/py36/lib/python3.6/site-packages/qpth/solvers/pdipm/batch.py\u001b[0m in \u001b[0;36mpre_factor_kkt\u001b[0;34m(Q, G, A)\u001b[0m\n\u001b[1;32m    252\u001b[0m     \u001b[0mnineq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnBatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_sizes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 254\u001b[0;31m     \u001b[0mQ_LU\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbtrifact\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    255\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    256\u001b[0m     \u001b[0;31m# S = [ A Q^{-1} A^T        A Q^{-1} G^T          ]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: failed to factorize batch element 0 (info == -4) at /home/robotec/Documents/NNs/pytorch/torch/lib/TH/generic/THTensorLapack.c:1009"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "from qpth.qp import QPFunction\n",
+    "\n",
+    "nx, nineq, neq = 6, 12, 0\n",
+    "Q = torch.eye(nx)\n",
+    "p = torch.zeros(nx)\n",
+    "G = torch.randn(nineq, nx)\n",
+    "h = torch.randn(nineq)\n",
+    "A = torch.Tensor() #randn(neq, nx)\n",
+    "b = torch.Tensor() #randn(neq)\n",
+    "\n",
+    "[Q, p, G, h, A, b] = [Variable(x.double()) for x in [Q, p, G, h, A, b]]\n",
+    "xhat = QPFunction()(Q, p, G, h, A, b)\n",
+    "print('xhat ', xhat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1.11+e7f5220\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.__version__)"
    ]
   },
   {
@@ -556,21 +608,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
