fix for softmax layer and net preds clogged in ddl

--- a/pyrnn/src/Untitled.ipynb
+++ b/pyrnn/src/Untitled.ipynb
@@ -89,35 +89,424 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on built-in function writer in module _csv:\n",
+      "Help on built-in function writerow:\n",
       "\n",
-      "writer(...)\n",
-      "    csv_writer = csv.writer(fileobj [, dialect='excel']\n",
-      "                                [optional keyword args])\n",
-      "        for row in sequence:\n",
-      "            csv_writer.writerow(row)\n",
+      "writerow(...)\n",
+      "    writerow(sequence)\n",
       "    \n",
-      "        [or]\n",
-      "    \n",
-      "        csv_writer = csv.writer(fileobj [, dialect='excel']\n",
-      "                                [optional keyword args])\n",
-      "        csv_writer.writerows(rows)\n",
-      "    \n",
-      "    The \"fileobj\" argument can be any object that supports the file API.\n",
+      "    Construct and write a CSV record from a sequence of fields.  Non-string\n",
+      "    elements will be converted to string.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
-    "help(csv.writer)"
+    "testF = open(os.path.join(os.getcwd(), 'test_csv'), 'w')\n",
+    "testW = csv.writer(testF)\n",
+    "help(testW.writerow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on module shutil:\n",
+      "\n",
+      "NAME\n",
+      "    shutil - Utility functions for copying and archiving files and directory trees.\n",
+      "\n",
+      "FILE\n",
+      "    /home/lex/anaconda2/lib/python2.7/shutil.py\n",
+      "\n",
+      "MODULE DOCS\n",
+      "    https://docs.python.org/library/shutil\n",
+      "\n",
+      "DESCRIPTION\n",
+      "    XXX The functions here don't copy the resource fork or other metadata on Mac.\n",
+      "\n",
+      "CLASSES\n",
+      "    exceptions.EnvironmentError(exceptions.StandardError)\n",
+      "        Error\n",
+      "        ExecError\n",
+      "        SpecialFileError\n",
+      "    \n",
+      "    class Error(exceptions.EnvironmentError)\n",
+      "     |  Method resolution order:\n",
+      "     |      Error\n",
+      "     |      exceptions.EnvironmentError\n",
+      "     |      exceptions.StandardError\n",
+      "     |      exceptions.Exception\n",
+      "     |      exceptions.BaseException\n",
+      "     |      __builtin__.object\n",
+      "     |  \n",
+      "     |  Data descriptors defined here:\n",
+      "     |  \n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object (if defined)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  __init__(...)\n",
+      "     |      x.__init__(...) initializes x; see help(type(x)) for signature\n",
+      "     |  \n",
+      "     |  __reduce__(...)\n",
+      "     |  \n",
+      "     |  __str__(...)\n",
+      "     |      x.__str__() <==> str(x)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  errno\n",
+      "     |      exception errno\n",
+      "     |  \n",
+      "     |  filename\n",
+      "     |      exception filename\n",
+      "     |  \n",
+      "     |  strerror\n",
+      "     |      exception strerror\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  __new__ = <built-in method __new__ of type object>\n",
+      "     |      T.__new__(S, ...) -> a new object with type S, a subtype of T\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from exceptions.BaseException:\n",
+      "     |  \n",
+      "     |  __delattr__(...)\n",
+      "     |      x.__delattr__('name') <==> del x.name\n",
+      "     |  \n",
+      "     |  __getattribute__(...)\n",
+      "     |      x.__getattribute__('name') <==> x.name\n",
+      "     |  \n",
+      "     |  __getitem__(...)\n",
+      "     |      x.__getitem__(y) <==> x[y]\n",
+      "     |  \n",
+      "     |  __getslice__(...)\n",
+      "     |      x.__getslice__(i, j) <==> x[i:j]\n",
+      "     |      \n",
+      "     |      Use of negative indices is not supported.\n",
+      "     |  \n",
+      "     |  __repr__(...)\n",
+      "     |      x.__repr__() <==> repr(x)\n",
+      "     |  \n",
+      "     |  __setattr__(...)\n",
+      "     |      x.__setattr__('name', value) <==> x.name = value\n",
+      "     |  \n",
+      "     |  __setstate__(...)\n",
+      "     |  \n",
+      "     |  __unicode__(...)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from exceptions.BaseException:\n",
+      "     |  \n",
+      "     |  __dict__\n",
+      "     |  \n",
+      "     |  args\n",
+      "     |  \n",
+      "     |  message\n",
+      "    \n",
+      "    class ExecError(exceptions.EnvironmentError)\n",
+      "     |  Raised when a command could not be executed\n",
+      "     |  \n",
+      "     |  Method resolution order:\n",
+      "     |      ExecError\n",
+      "     |      exceptions.EnvironmentError\n",
+      "     |      exceptions.StandardError\n",
+      "     |      exceptions.Exception\n",
+      "     |      exceptions.BaseException\n",
+      "     |      __builtin__.object\n",
+      "     |  \n",
+      "     |  Data descriptors defined here:\n",
+      "     |  \n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object (if defined)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  __init__(...)\n",
+      "     |      x.__init__(...) initializes x; see help(type(x)) for signature\n",
+      "     |  \n",
+      "     |  __reduce__(...)\n",
+      "     |  \n",
+      "     |  __str__(...)\n",
+      "     |      x.__str__() <==> str(x)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  errno\n",
+      "     |      exception errno\n",
+      "     |  \n",
+      "     |  filename\n",
+      "     |      exception filename\n",
+      "     |  \n",
+      "     |  strerror\n",
+      "     |      exception strerror\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  __new__ = <built-in method __new__ of type object>\n",
+      "     |      T.__new__(S, ...) -> a new object with type S, a subtype of T\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from exceptions.BaseException:\n",
+      "     |  \n",
+      "     |  __delattr__(...)\n",
+      "     |      x.__delattr__('name') <==> del x.name\n",
+      "     |  \n",
+      "     |  __getattribute__(...)\n",
+      "     |      x.__getattribute__('name') <==> x.name\n",
+      "     |  \n",
+      "     |  __getitem__(...)\n",
+      "     |      x.__getitem__(y) <==> x[y]\n",
+      "     |  \n",
+      "     |  __getslice__(...)\n",
+      "     |      x.__getslice__(i, j) <==> x[i:j]\n",
+      "     |      \n",
+      "     |      Use of negative indices is not supported.\n",
+      "     |  \n",
+      "     |  __repr__(...)\n",
+      "     |      x.__repr__() <==> repr(x)\n",
+      "     |  \n",
+      "     |  __setattr__(...)\n",
+      "     |      x.__setattr__('name', value) <==> x.name = value\n",
+      "     |  \n",
+      "     |  __setstate__(...)\n",
+      "     |  \n",
+      "     |  __unicode__(...)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from exceptions.BaseException:\n",
+      "     |  \n",
+      "     |  __dict__\n",
+      "     |  \n",
+      "     |  args\n",
+      "     |  \n",
+      "     |  message\n",
+      "    \n",
+      "    class SpecialFileError(exceptions.EnvironmentError)\n",
+      "     |  Raised when trying to do a kind of operation (e.g. copying) which is\n",
+      "     |  not supported on a special file (e.g. a named pipe)\n",
+      "     |  \n",
+      "     |  Method resolution order:\n",
+      "     |      SpecialFileError\n",
+      "     |      exceptions.EnvironmentError\n",
+      "     |      exceptions.StandardError\n",
+      "     |      exceptions.Exception\n",
+      "     |      exceptions.BaseException\n",
+      "     |      __builtin__.object\n",
+      "     |  \n",
+      "     |  Data descriptors defined here:\n",
+      "     |  \n",
+      "     |  __weakref__\n",
+      "     |      list of weak references to the object (if defined)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  __init__(...)\n",
+      "     |      x.__init__(...) initializes x; see help(type(x)) for signature\n",
+      "     |  \n",
+      "     |  __reduce__(...)\n",
+      "     |  \n",
+      "     |  __str__(...)\n",
+      "     |      x.__str__() <==> str(x)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  errno\n",
+      "     |      exception errno\n",
+      "     |  \n",
+      "     |  filename\n",
+      "     |      exception filename\n",
+      "     |  \n",
+      "     |  strerror\n",
+      "     |      exception strerror\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data and other attributes inherited from exceptions.EnvironmentError:\n",
+      "     |  \n",
+      "     |  __new__ = <built-in method __new__ of type object>\n",
+      "     |      T.__new__(S, ...) -> a new object with type S, a subtype of T\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Methods inherited from exceptions.BaseException:\n",
+      "     |  \n",
+      "     |  __delattr__(...)\n",
+      "     |      x.__delattr__('name') <==> del x.name\n",
+      "     |  \n",
+      "     |  __getattribute__(...)\n",
+      "     |      x.__getattribute__('name') <==> x.name\n",
+      "     |  \n",
+      "     |  __getitem__(...)\n",
+      "     |      x.__getitem__(y) <==> x[y]\n",
+      "     |  \n",
+      "     |  __getslice__(...)\n",
+      "     |      x.__getslice__(i, j) <==> x[i:j]\n",
+      "     |      \n",
+      "     |      Use of negative indices is not supported.\n",
+      "     |  \n",
+      "     |  __repr__(...)\n",
+      "     |      x.__repr__() <==> repr(x)\n",
+      "     |  \n",
+      "     |  __setattr__(...)\n",
+      "     |      x.__setattr__('name', value) <==> x.name = value\n",
+      "     |  \n",
+      "     |  __setstate__(...)\n",
+      "     |  \n",
+      "     |  __unicode__(...)\n",
+      "     |  \n",
+      "     |  ----------------------------------------------------------------------\n",
+      "     |  Data descriptors inherited from exceptions.BaseException:\n",
+      "     |  \n",
+      "     |  __dict__\n",
+      "     |  \n",
+      "     |  args\n",
+      "     |  \n",
+      "     |  message\n",
+      "\n",
+      "FUNCTIONS\n",
+      "    copy(src, dst)\n",
+      "        Copy data and mode bits (\"cp src dst\").\n",
+      "        \n",
+      "        The destination may be a directory.\n",
+      "    \n",
+      "    copy2(src, dst)\n",
+      "        Copy data and all stat info (\"cp -p src dst\").\n",
+      "        \n",
+      "        The destination may be a directory.\n",
+      "    \n",
+      "    copyfile(src, dst)\n",
+      "        Copy data from src to dst\n",
+      "    \n",
+      "    copyfileobj(fsrc, fdst, length=16384)\n",
+      "        copy data from file-like object fsrc to file-like object fdst\n",
+      "    \n",
+      "    copymode(src, dst)\n",
+      "        Copy mode bits from src to dst\n",
+      "    \n",
+      "    copystat(src, dst)\n",
+      "        Copy all stat info (mode bits, atime, mtime, flags) from src to dst\n",
+      "    \n",
+      "    copytree(src, dst, symlinks=False, ignore=None)\n",
+      "        Recursively copy a directory tree using copy2().\n",
+      "        \n",
+      "        The destination directory must not already exist.\n",
+      "        If exception(s) occur, an Error is raised with a list of reasons.\n",
+      "        \n",
+      "        If the optional symlinks flag is true, symbolic links in the\n",
+      "        source tree result in symbolic links in the destination tree; if\n",
+      "        it is false, the contents of the files pointed to by symbolic\n",
+      "        links are copied.\n",
+      "        \n",
+      "        The optional ignore argument is a callable. If given, it\n",
+      "        is called with the `src` parameter, which is the directory\n",
+      "        being visited by copytree(), and `names` which is the list of\n",
+      "        `src` contents, as returned by os.listdir():\n",
+      "        \n",
+      "            callable(src, names) -> ignored_names\n",
+      "        \n",
+      "        Since copytree() is called recursively, the callable will be\n",
+      "        called once for each directory that is copied. It returns a\n",
+      "        list of names relative to the `src` directory that should\n",
+      "        not be copied.\n",
+      "        \n",
+      "        XXX Consider this example code rather than the ultimate tool.\n",
+      "    \n",
+      "    get_archive_formats()\n",
+      "        Returns a list of supported formats for archiving and unarchiving.\n",
+      "        \n",
+      "        Each element of the returned sequence is a tuple (name, description)\n",
+      "    \n",
+      "    ignore_patterns(*patterns)\n",
+      "        Function that can be used as copytree() ignore parameter.\n",
+      "        \n",
+      "        Patterns is a sequence of glob-style patterns\n",
+      "        that are used to exclude files\n",
+      "    \n",
+      "    make_archive(base_name, format, root_dir=None, base_dir=None, verbose=0, dry_run=0, owner=None, group=None, logger=None)\n",
+      "        Create an archive file (eg. zip or tar).\n",
+      "        \n",
+      "        'base_name' is the name of the file to create, minus any format-specific\n",
+      "        extension; 'format' is the archive format: one of \"zip\", \"tar\", \"bztar\"\n",
+      "        or \"gztar\".\n",
+      "        \n",
+      "        'root_dir' is a directory that will be the root directory of the\n",
+      "        archive; ie. we typically chdir into 'root_dir' before creating the\n",
+      "        archive.  'base_dir' is the directory where we start archiving from;\n",
+      "        ie. 'base_dir' will be the common prefix of all files and\n",
+      "        directories in the archive.  'root_dir' and 'base_dir' both default\n",
+      "        to the current directory.  Returns the name of the archive file.\n",
+      "        \n",
+      "        'owner' and 'group' are used when creating a tar archive. By default,\n",
+      "        uses the current owner and group.\n",
+      "    \n",
+      "    move(src, dst)\n",
+      "        Recursively move a file or directory to another location. This is\n",
+      "        similar to the Unix \"mv\" command.\n",
+      "        \n",
+      "        If the destination is a directory or a symlink to a directory, the source\n",
+      "        is moved inside the directory. The destination path must not already\n",
+      "        exist.\n",
+      "        \n",
+      "        If the destination already exists but is not a directory, it may be\n",
+      "        overwritten depending on os.rename() semantics.\n",
+      "        \n",
+      "        If the destination is on our current filesystem, then rename() is used.\n",
+      "        Otherwise, src is copied to the destination and then removed.\n",
+      "        A lot more could be done here...  A look at a mv.c shows a lot of\n",
+      "        the issues this implementation glosses over.\n",
+      "    \n",
+      "    register_archive_format(name, function, extra_args=None, description='')\n",
+      "        Registers an archive format.\n",
+      "        \n",
+      "        name is the name of the format. function is the callable that will be\n",
+      "        used to create archives. If provided, extra_args is a sequence of\n",
+      "        (name, value) tuples that will be passed as arguments to the callable.\n",
+      "        description can be provided to describe the format, and will be returned\n",
+      "        by the get_archive_formats() function.\n",
+      "    \n",
+      "    rmtree(path, ignore_errors=False, onerror=None)\n",
+      "        Recursively delete a directory tree.\n",
+      "        \n",
+      "        If ignore_errors is set, errors are ignored; otherwise, if onerror\n",
+      "        is set, it is called to handle the error with arguments (func,\n",
+      "        path, exc_info) where func is os.listdir, os.remove, or os.rmdir;\n",
+      "        path is the argument to that function that caused it to fail; and\n",
+      "        exc_info is a tuple returned by sys.exc_info().  If ignore_errors\n",
+      "        is false and onerror is None, an exception is raised.\n",
+      "    \n",
+      "    unregister_archive_format(name)\n",
+      "\n",
+      "DATA\n",
+      "    __all__ = ['copyfileobj', 'copyfile', 'copymode', 'copystat', 'copy', ...\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(shutil)"
    ]
   },
   {
