--- a/pyrnn/src/Untitled.ipynb
+++ b/pyrnn/src/Untitled.ipynb
@@ -2,31 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-5e0ab602c0e8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mlsf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadSavedCSVFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/training_data.csv.gz'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'dp' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "ro, li, bi, bo, li, ro = [], [], [], [], [], []"
+    "import os\n",
+    "import sys\n",
+    "sys.path.insert(0,\"data\")\n",
+    "try:\n",
+    "    import data_parser as dp\n",
+    "except ImportError: pass\n",
+    "\n",
+    "lsf = dp.loadSavedCSVFile('data/training_data.csv.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function reader in module _csv:\n",
+      "\n",
+      "reader(...)\n",
+      "    csv_reader = reader(iterable [, dialect='excel']\n",
+      "                            [optional keyword args])\n",
+      "        for row in csv_reader:\n",
+      "            process(row)\n",
+      "    \n",
+      "    The \"iterable\" argument can be any object that returns a line\n",
+      "    of input for each iteration, such as a file object or a list.  The\n",
+      "    optional \"dialect\" parameter is discussed below.  The function\n",
+      "    also accepts optional keyword arguments which override settings\n",
+      "    provided by the dialect.\n",
+      "    \n",
+      "    The returned object is an iterator.  Each iteration returns a row\n",
+      "    of the CSV file (which can span multiple input lines).\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "ro"
+    "import csv\n",
+    "help(csv.reader)\n"
    ]
   },
   {
@@ -41,21 +78,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
